--- a/client/views/auction.html
+++ b/client/views/auction.html
@@ -11,14 +11,14 @@
   <script src="/config.js"></script>
 
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-  <script src="./jiff/dist/jiff-client.js"></script>
-  <script src="./jiff/lib/ext/jiff-client-restful.js"></script>
+  <script src="/dist/jiff-client.js"></script>
+  <script src="/lib/ext/jiff-client-restful.js"></script>
 
   <!-- Contains UI Handlers and Input Checks -->
-  <script type="text/javascript" src="./client.js"></script>
+  <script type="text/javascript" src="../client.js"></script>
 
   <!-- Contains Client MPC code -->
-  <script type="text/javascript" src="./client-mpc.js"></script>
+  <script type="text/javascript" src="../client-mpc.js"></script>
 </head>
 <body>
   <h1>Connect JIFF</h1>
