--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title> Signup Form</title>
-<link rel="stylesheet" type="text/css" href="../style.css">
-</head>
+<!-- <link rel="stylesheet" type="text/css" href="../style.css">
+ --></head>
 
 <body>
-      
     <br>
     <br>
     <br>
