--- a/client/views/signup_success.html
+++ b/client/views/signup_success.html
@@ -1,29 +1,14 @@
 <html>
 <head>
-    <title> Signup Form</title>
-          
-<!-- <link rel="stylesheet" type="text/css" href="../style.css"> -->
+<title> Signup Form</title>      
+<link rel='stylesheet' type='text/css' href='../style.css'>
 </head>
     <body>
     <br>
     <br>
     <br>
-    <div class="container" >
-        <div class="row">
-        <div class="col-md-3">
-        </div>
-                  
-        <div class="col-md-6 main">
-                      
-            <h1> Signup Successful</h1>
-                      
-        </div>
-                  
-                  
-        <div class="col-md-3">
-        </div>
-                  
-        </div>
+    <div class='container'>
+        <h2>You successfully registered for the auction! Once the auction begins, you will receive an email with a link to log in to the bidding page.</h2>
     </div>
 </body>
 </html>
