--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,42 +1,27 @@
 <html>
 <head>
-    <title> Signup Form</title>
-<!-- <link rel="stylesheet" type="text/css" href="../style.css">
- --></head>
+<title> Signup Form</title>
+<link rel='stylesheet' type='text/css' href='../style.css'>
+</head>
 
 <body>
-    <br>
-    <br>
-    <br>
-    <div class="container" >
-        <div class="row">
-        <div class="col-md-3">
-                      
-        </div>
-                  
-        <div class="col-md-6 main">
-                      
-            <form action="/" method="POST">
-                      
-            <h1> Signup form </h1>
-                              
-            <input class="box" type="text" name="email" id="email" 
-            placeholder="email" required/><br>
-                              
-            <input class="box" type="password" name="password" 
-            id="password" placeholder="password" required/><br>
+    <form action="/" method="POST">
+        <h1>Sign Up for {{ title }}</h1>
+        <h3>Auction description: {{ description }}</h3>
+        <p>Please register for this auction by entering an email and password, which you will use to log in to the bidding page once the auction is live. If you successfully register, you will be redirected to a success confirmation page.</p>
+        <p>The registration deadline is {{ deadline }}. After this date, you will no longer be able to register for the auction.</p>
+        <label for="email"><b>Email</b></label>                      
+        <input class="box" type="text" name="email" id="email" 
+            placeholder="Enter Email" required/><br>
+        
+        <label for="password"><b>Password</b></label>
+        <input class="box" type="password" name="password" 
+            id="password" placeholder="Enter Password" required/><br>
 
-            <br>
-            <input type="submit" id="submitDetails"  
+        <br>
+        <input type="submit" id="submitDetails"  
             name="submitDetails" value="Submit" /><br>
                       
-            </form>
-                      
-        </div>
-                    
-        <div class="col-md-3">
-        </div>
-                  
-    </div>
-    </div>
+    </form>
 </body>
+</html>
