add start and end time to create auction page + register user with auction ID

--- a/client/views/create.html
+++ b/client/views/create.html
@@ -21,8 +21,14 @@
       <label for="auctionDescription">Auction description:</label><br>
       <input type="text" id="auctionDescription" name="auctionDescription">
       <br><br>
-      <label for="auctionRegistrationDeadline">Auction registration deadline (EST):</label><br>
+      <label for="auctionRegistrationDeadline">Bidder registration deadline (EST):</label><br>
       <input type="datetime-local" id="auctionRegistrationDeadline" name="auctionRegistrationDeadline">
+      <br><br>
+      <label for="auctionStart">Auction start time (EST):</label><br>
+      <input type="datetime-local" id="auctionStart" name="auctionStart">
+      <br><br>
+      <label for="auctionEnd">Auction end time (EST):</label><br>
+      <input type="datetime-local" id="auctionEnd" name="auctionEnd">
       <br><br>
       <input type="submit" id="createAuction" name="createAuction" value="Create auction"/>
     </form>
