--- a/client/views/register.html
+++ b/client/views/register.html
@@ -18,6 +18,9 @@
         <input class="box" type="password" name="password" 
             id="password" placeholder="Enter Password" required/><br>
 
+        <input class="box" type="hidden" name="auctionID" 
+            id="auctionID" value={{auction_id}}><br>
+
         <br>
         <input type="submit" id="submitDetails"  
             name="submitDetails" value="Submit" /><br>
