--- a/client/views/auction.html
+++ b/client/views/auction.html
@@ -15,13 +15,19 @@
 </head>
 <body>
   <p hidden id="email">{{ email }}</p>
-  <h1>Connect JIFF</h1>
-  <label for="computation_id">Computation ID</label><input id="computation_id" value="test"/><br/><br/>
-  <button id="connectButton" onclick="connect();">Connect</button>
+  <h1>{{ title }}</h1>
+  <h2>{{ description }}</h2>
+  <label for="computation_id">Computation ID</label>
+  <input id="computation_id" value="test"/><br/><br/>
+  <label for="auction_id">Auction ID</label>
+  <input id="auction_id" value={{auction_id}}><br/><br/>
+  <p>The bid submission deadline is {{ end }}. Please make sure to submit your bid before this time.</p> 
   <br/><br/>
   <hr/>
-  <h1>Submit a bid for the auction</h1>
-  <label for="number">Input Number (between 0 and 100)</label> <input id="number" pattern="[0-9]+"> &nbsp; <button onclick="submit();" disabled="disabled" id="button">Bid</button><br/>
+  <h1>Submit your bid for {{ title }}</h1>
+  <label for="number">Input Number (between 0 and 100)</label><br><br>
+  <input id="number" pattern="[0-9]+"><br><br>
+  <button onclick="submit();" id="button">Bid</button><br/>
   <div id="output"></div>
 </body>
 </html>
