UI for auction administrator to udpate config.js and send notification emails to registered users

--- a/client/views/create.html
+++ b/client/views/create.html
@@ -14,7 +14,7 @@
 
   <div class="row" id="auctionCreation">
     <h2>Create a new auction</h2>
-    <form action="/create-auction" method="POST">
+    <form action="/create_auction" method="POST">
       <label for="auctionTitle">Auction title:</label><br>
       <input type="text" id="auctionTitle" name="auctionTitle">
       <br><br>
