--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -8,9 +8,26 @@
 
 </head>
 <body>
-  <header>
-    <h1>Hello</h1>
-    <h2>{{ text }}</h2>
-  </header>
+  <h2>Manage Auction</h2>
+    <p>Title: {{ title }}</p>
+    <p>Description: {{ description }}</p>
+    <p id="auction-id">ID: {{ auction_id }}</p>
+    <p>Registration deadline: {{ deadline }}</p>
+    <p>Auction start time: {{ start }}</p>
+    <p>Auction end time / bid submission deadline: {{ end }}</p>
+    <hr>
+    <form id="auction-manage">
+      <p>After the registration period ends, click the button below to update the configuration file with the maximum number of bidders that will participate in the auction. This step is necessary for securely computing the auction outcome.</p> 
+      <button type="button" id="update-config" onclick="updateConfigurationFile();">Update Configuration File</button>
+      <p id="update-button-output"></p>
+
+      <p>After all computation parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive a link to the bid submission page.</p> 
+      <button type="button" id="notify-registered-users" onclick="notifyRegisteredUsers();">Notify Auction Participants</button>
+      <p id="notify-button-output"></p>
+      
+      <hr>
+      <p>After the secure computation finishes, click the button below to inform the bidders about the auction outcome. The winner will receive an email with the second highest bid value, which is the price to be paid. All other bidders will receive an email saying that they did not win the auction.</p> 
+      <button type="button" id="email-results" disabled>Email Auction Results</button>
+   </form>
 </body>
 </html>
