--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -3,11 +3,14 @@
   <title>Manage Secure Auction</title>
 
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-
   <script type="text/javascript" src="../administratorController.js"></script>
+  <script src="/config.js"></script>
+  <script src="/dist/jiff-client.js"></script>
+  <script src="/lib/ext/jiff-client-restful.js"></script>
+  <script type="text/javascript" src="../client-mpc.js"></script>
 
 </head>
-<body>
+<body onload="checkBidSubmission();">
   <h2>Manage Auction</h2>
     <p>Title: {{ title }}</p>
     <p>Description: {{ description }}</p>
@@ -15,6 +18,7 @@
     <p>Registration deadline: {{ deadline }}</p>
     <p>Auction start time: {{ start }}</p>
     <p>Auction end time / bid submission deadline: {{ end }}</p>
+    <p id="bid-submission-deadline" hidden>{{ end_time }}</p>
     <hr>
     <form id="auction-manage">
       <p>After the registration period ends, click the button below to update the configuration file with the maximum number of bidders that will participate in the auction. This step is necessary for securely computing the auction outcome.</p> 
@@ -27,7 +31,7 @@
       
       <hr>
       <p>After the secure computation finishes, click the button below to inform the bidders about the auction outcome. The winner will receive an email with the second highest bid value, which is the price to be paid. All other bidders will receive an email saying that they did not win the auction.</p> 
-      <button type="button" id="email-results" disabled>Email Auction Results</button>
+      <button type="button" id="email-results">Email Auction Results</button>
    </form>
 </body>
 </html>
