check if the compute parties are connected before notifying the participants

--- a/client/views/auction.html
+++ b/client/views/auction.html
@@ -25,7 +25,7 @@
   <br/><br/>
   <hr/>
   <h1>Submit your bid for {{ title }}</h1>
-  <label for="number">Input Number (between 0 and 100)</label><br><br>
+  <label for="number">Input your bid</label><br><br>
   <input id="number" pattern="[0-9]+"><br><br>
   <button onclick="submit();" id="button">Bid</button><br/>
   <div id="output"></div>
