--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -9,8 +9,15 @@
   <script src="/lib/ext/jiff-client-restful.js"></script>
   <script type="text/javascript" src="../client-mpc.js"></script>
 
+  <script>
+    window.onload = function () {
+      checkBidSubmission();
+      checkAuctionReadiness();
+    }
+  </script>
+
 </head>
-<body onload="checkBidSubmission();">
+<body>
   <h2>Manage Auction</h2>
     <p>Title: {{ title }}</p>
     <p>Description: {{ description }}</p>
@@ -18,13 +25,17 @@
     <p>Registration deadline: {{ deadline }}</p>
     <p>Auction start time: {{ start }}</p>
     <p>Auction end time / bid submission deadline: {{ end }}</p>
+    <p id="registration-deadline" hidden>{{ deadline_time }}</p>
+    <p id="auction-start-time" hidden>{{ start_time }}</p>
     <p id="bid-submission-deadline" hidden>{{ end_time }}</p>
     <hr>
     <form id="auction-manage">
       <p>After the registration period ends, click the button below to update the configuration file with the maximum number of bidders that will participate in the auction. This step is necessary for securely computing the auction outcome.</p> 
       <button type="button" id="update-config" onclick="updateConfigurationFile();">Update Configuration File</button>
       <p id="update-button-output"></p>
+      <br>
 
+      <p id="compute-party-connection-status">Status: No computation parties are connected to the server.</p>
       <p>After all computation parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive a link to the bid submission page.</p> 
       <button type="button" id="notify-registered-users" onclick="notifyRegisteredUsers();">Notify Auction Participants</button>
       <p id="notify-button-output"></p>
