--- a/client/views/create.html
+++ b/client/views/create.html
@@ -2,36 +2,38 @@
 <head>
   <title>Secure Auction Creation</title>
 
-  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <link rel='stylesheet' type='text/css' href='../style.css'>
 
+  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <script type="text/javascript" src="../administratorController.js"></script>
 
 </head>
 <body>
-  <header>
-    <h1>Secure Auction Administrator</h1>
-  </header>
-
-  <div class="row" id="auctionCreation">
+  <div id="page-info">
+    <header>
+      <h2>Secure Auction Administrator</h2>
+    </header>
+    <hr>
     <h2>Create a new auction</h2>
-    <form action="/create-auction" method="POST">
-      <label for="auctionTitle">Auction title:</label><br>
+    <form action="/create-auction" method="POST" id="create-auction-form">
+      <label for="auctionTitle"><strong>Auction title:</strong></label>
       <input type="text" id="auctionTitle" name="auctionTitle">
       <br><br>
-      <label for="auctionDescription">Auction description:</label><br>
-      <input type="text" id="auctionDescription" name="auctionDescription">
+      <label for="auctionDescription"><strong>Auction description:</strong></label>
+      <textarea type="text" id="auctionDescription" name="auctionDescription" rows="4" cols="50"></textarea>
       <br><br>
-      <label for="auctionRegistrationDeadline">Bidder registration deadline (EST):</label><br>
+      <label for="auctionRegistrationDeadline"><strong>Bidder registration deadline (EST):</strong></label>
       <input type="datetime-local" id="auctionRegistrationDeadline" name="auctionRegistrationDeadline">
       <br><br>
-      <label for="auctionStart">Auction start time (EST):</label><br>
+      <label for="auctionStart"><strong>Auction start time (EST):</strong></label>
       <input type="datetime-local" id="auctionStart" name="auctionStart">
       <br><br>
-      <label for="auctionEnd">Auction end time (EST):</label><br>
+      <label for="auctionEnd"><strong>Auction end time (EST):</strong></label>
       <input type="datetime-local" id="auctionEnd" name="auctionEnd">
       <br><br>
       <input type="submit" id="createAuction" name="createAuction" value="Create auction"/>
     </form>
+    </div>
   </div>
 </body>
 </html>
