--- a/client/views/registration_closed.html
+++ b/client/views/registration_closed.html
@@ -7,8 +7,10 @@
     <br>
     <br>
     <br>
-    <div class='container'>
-        <h2>Auction registration is currently closed. Please check back at a later time.</h2>
-    </div>
+    <div id="page-info">
+	    <div class='plain-text'>
+	        <h2>Auction registration is currently closed. Please check back at a later time.</h2>
+	    </div>
+	</div>
 </body>
 </html>
