--- a/client/views/signup_success.html
+++ b/client/views/signup_success.html
@@ -7,8 +7,10 @@
     <br>
     <br>
     <br>
-    <div class='container'>
-        <h2>You successfully registered for the auction! Once the auction begins, you will receive an email with a link to log in to the bidding page.</h2>
-    </div>
+    <div id="page-info">
+	    <div class='plain-text'>
+	        <h2>You successfully registered for the auction! Once the auction begins, you will receive an email with a link to log in to the bidding page.</h2>
+	    </div>
+	</div>
 </body>
 </html>
