--- a/client/views/login.html
+++ b/client/views/login.html
@@ -8,21 +8,22 @@
 	<br>
     <br>
     <br>
-	<form action="/login" method="POST">
-		<h1>Log In to Example Auction</h1>
-	    <p>Please confirm your identity by using the email and password you chose during the registration process. After you log in, you will be redirected to the bidding page.</p>
+    <div id="page-info">
+		<form action="/login" method="POST" id="login-form">
+			<h1>Log In to {{ title }}</h1>
+		    <p>Please confirm your identity by using the email and password you chose during the registration process. After you log in, you will be redirected to the bidding page.</p>
 
-	    <label for="email"><b>Email</b></label>         
-	    <input type="text" name="email"
-	        placeholder="email">
+		    <label for="email"><b>Email</b></label>         
+		    <input type="text" name="email"
+		        placeholder="Email"><br>
 
-	    <label for="password"><b>Password</b></label>
-	    <input type="password" name="password" 
-	        placeholder="password">
+		    <label for="password"><b>Password</b></label>
+		    <input type="password" name="password" 
+		        placeholder="Password"><br><br>
 
-	    <br>
-        <input type="submit" id="submitDetails"  
-            name="submitDetails" value="Log In"/><br>
-	</form>
+	        <input type="submit" id="submitDetails"  
+	            name="submitDetails" value="Log In"/><br>
+		</form>
+	</div>
 </body>
 </html>
