--- a/client/views/create.html
+++ b/client/views/create.html
@@ -30,8 +30,8 @@
       <br><br>
       <label for="auctionEnd"><strong>Auction end time (EST):</strong></label>
       <input type="datetime-local" id="auctionEnd" name="auctionEnd">
-      <br><br>
-      <input type="submit" id="createAuction" name="createAuction" value="Create auction"/>
+      <br><br><br>
+      <input type="submit" id="createAuction" name="createAuction" value="Create"/>
     </form>
     </div>
   </div>
