--- a/client/views/login.html
+++ b/client/views/login.html
@@ -10,19 +10,17 @@
     <br>
     <div id="page-info">
 		<form action="/login" method="POST" id="login-form">
-			<h1>Log In to {{ title }}</h1>
-		    <p>Please confirm your identity by using the email and password you chose during the registration process. After you log in, you will be redirected to the bidding page.</p>
+			<h1>Log in to {{ title }}</h1>
+		    <p>Please confirm your identity by using the email and password you chose during the auction registration process. After you log in, you will be redirected to the bidding page.</p><br>
 
-		    <label for="email"><b>Email</b></label>         
 		    <input type="text" name="email"
 		        placeholder="Email"><br>
 
-		    <label for="password"><b>Password</b></label>
 		    <input type="password" name="password" 
 		        placeholder="Password"><br><br>
 
 	        <input type="submit" id="submitDetails"  
-	            name="submitDetails" value="Log In"/><br>
+	            name="submitDetails" value="Log in"/><br>
 		</form>
 	</div>
 </body>
