--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -47,7 +47,7 @@
       <p id="update-button-output"></p>
       
       <br><hr><br>
-      <p>After all computation parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive a link to the bid submission page.</p> 
+      <p>After all computation parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive an email with a link to the bid submission page.</p> 
       <p id="compute-party-connection-status"><strong>Status:</strong> 0 computation parties are connected to the server</p><br>
       <button type="button" class="button" id="notify-registered-users" onclick="notifyRegisteredUsers();" disabled>Notify Auction Participants</button>
       <p id="notify-button-output"></p>
