show local time instead of UTC time and show auction outcome to administrator

--- a/client/views/create.html
+++ b/client/views/create.html
@@ -22,13 +22,13 @@
       <label for="auctionDescription"><strong>Auction description:</strong></label>
       <textarea type="text" id="auctionDescription" name="auctionDescription" rows="4" cols="50"></textarea>
       <br><br>
-      <label for="auctionRegistrationDeadline"><strong>Bidder registration deadline (EST):</strong></label>
+      <label for="auctionRegistrationDeadline"><strong>Bidder registration deadline:</strong></label>
       <input type="datetime-local" id="auctionRegistrationDeadline" name="auctionRegistrationDeadline">
       <br><br>
-      <label for="auctionStart"><strong>Auction start time (EST):</strong></label>
+      <label for="auctionStart"><strong>Auction start time:</strong></label>
       <input type="datetime-local" id="auctionStart" name="auctionStart">
       <br><br>
-      <label for="auctionEnd"><strong>Auction end time (EST):</strong></label>
+      <label for="auctionEnd"><strong>Auction end time:</strong></label>
       <input type="datetime-local" id="auctionEnd" name="auctionEnd">
       <br><br><br>
       <input type="submit" id="createAuction" name="createAuction" value="Create"/>
