--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -53,8 +53,10 @@
       <p id="notify-button-output"></p>
       
       <br><hr><br>
-      <p>After the secure computation finishes, click the button below to send the auction results to the bidders. The winner will receive an email with the second highest bid value, which is the price to be paid. All other participants will receive an email saying that they did not win the auction.</p> 
-      <p id="MPC-status"><strong>Status:</strong> The computation has not started yet</p><br>
+      <p>After the secure computation finishes, click the button below to send the auction results to the bidders. The winner will receive an email with the second-highest bid value, which is the price to be paid. All other participants will receive an email saying that they did not win the auction.</p> 
+      <p id="MPC-status"><strong>Status:</strong> The computation has not started yet</p>
+      <p id="auction-winner"></p>
+      <p id="auction-price"></p>
       <button type="button" class="button" id="email-results" onclick="emailAuctionResults();" disabled>Email Auction Results</button>
       <p id="email-results-output"></p>
 
