--- a/client/views/auction.html
+++ b/client/views/auction.html
@@ -22,15 +22,15 @@
     <h1>{{ title }}</h1>
     <h2>{{ description }}</h2>
     <p id="auction_id"><strong>Auction ID:</strong> {{ auction_id }}</p>
-    <p>The bid submission deadline is <strong>{{ end }}</strong>. Please make sure to submit your bid before this time.</p> 
+    <p>The bid submission deadline is <strong>{{ end }}</strong>. Please make sure to submit your bid <strong>before</strong> this time.</p> 
     <hr>
     <br>
-    <form id="bid-submission-form">
+    <div id="bid-submission-form">
       <label for="number"><strong>Enter your bid:</strong></label>
       $ <input id="number" pattern="[0-9]+"><br><br><br>
       <button onclick="submit();" id="bid-submit-button" class="button">Submit</button><br/>
       <div id="output"></div>
-    </form>
+    </div>
   <div>
 </body>
 </html>
