--- a/client/views/register.html
+++ b/client/views/register.html
@@ -13,7 +13,7 @@
             <p><b>The registration deadline is {{ deadline }}. After this date, you will no longer be able to register for this auction.</b></p>
             <hr>
             <p>Please register for this auction by entering an email and a password, which you will use to log in to the bidding page once the auction is live. If you successfully register, you will be redirected to a success confirmation page.</p>
-            <p>The auction will begin at <strong>{{ start }}</strong>. At that time, you will receive an email with a link to the auction. You must submit your bid by <strong>{{ end }}</strong>.</p>
+            <p>The auction will begin at <strong>{{ start }}</strong>. At that time, you will receive an email with a link to the auction. You must submit your bid <strong>before {{ end }}</strong>.</p>
         </div>
         <form action="/" method="POST" id="registration-form">
             <label for="email"><b>Email</b></label><br>                      
